update protocol in import map

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -35,9 +35,9 @@
     {
       "imports": {
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
-        "@moosecodes/root-config": "//moosecodes.com/root-config/dist/moosecodes-root-config.js",
-        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
-        "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
+        "@moosecodes/root-config": "https://moosecodes.com/root-config/dist/moosecodes-root-config.js",
+        "@moosecodes/mc-news-ui": "https://moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-styleguide": "https://moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
   </script>
