--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,10 +34,10 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
-        "@moosecodes/root-config": "http://moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
-        "@moosecodes/mc-news-ui": "http://moosecodes.com/mc-news-ui/dist/js/app.js",
-        "@moosecodes/mc-styleguide": "http://moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
+        "single-spa": "//cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "@moosecodes/root-config": "//moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
+        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
   </script>
