--- a/src/index.ejs
+++ b/src/index.ejs
@@ -36,7 +36,7 @@
       "imports": {
         "single-spa": "//cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
         "@moosecodes/root-config": "//moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
-        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-primary-nav-ui": "//moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
         "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
