--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,25 +34,29 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
-        "@moosecodes/root-config": "https://moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
-        "@moosecodes/mc-primary-nav-ui": "https://moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
-        "@moosecodes/mc-styleguide": "https://moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
+        "single-spa": "//cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "@moosecodes/root-config": "//moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
+        "@moosecodes/mc-primary-nav-ui": "//moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
+        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
   </script>
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js" as="script">
 
+  <% if (!isLocal) { %>
   <!-- Add your organization's prod import map URL to this script's src  -->
-  <script type="systemjs-importmap" src="/importmap.json"></script>
+  <script type="systemjs-importmap" src="//moosecodes.com/importmap.json"></script>
+  <% } %>
 
   <% if (isLocal) { %>
   <script type="systemjs-importmap">
     {
       "imports": {
         "@moosecodes/root-config": "//localhost:9000/moosecodes-root-config.js",
-        "@moosecodes/mc-primary-nav-ui": "~/Developer/code/single-spa/moosecodes/mc-primary-nav-ui/dist/js/app.js",
-        "@moosecodes/mc-styleguide": "https://moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
+        "@moosecodes/mc-primary-nav-ui": "http://localhost:8081/js/app.js",
+        "@moosecodes/mc-news-ui": "http://localhost:8082/js/app.js",
+        "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
   </script>
