--- a/src/index.ejs
+++ b/src/index.ejs
@@ -54,8 +54,8 @@
     {
       "imports": {
         "@moosecodes/root-config": "//localhost:9000/moosecodes-root-config.js",
-        "@moosecodes/mc-primary-nav-ui": "http://localhost:8081/js/app.js",
-        "@moosecodes/mc-news-ui": "http://localhost:8082/js/app.js",
+        "@moosecodes/mc-primary-nav-ui": "//localhost:8081/js/app.js",
+        "@moosecodes/mc-news-ui": "//localhost:8080/js/app.js",
         "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
