update import maps

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Root Config</title>
+  <title>Moosecodes.com</title>
 
   <!--
     Remove this if you only support browsers that support async/await.
@@ -50,7 +50,8 @@
       "imports": {
         "@moosecodes/root-config": "//localhost:9000/moosecodes-root-config.js",
         "@moosecodes/mc-primary-nav-ui": "//moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
-        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-news-ui": "//localhost:8080/js/app.js",
+        "@moosecodes/mc-movies-ui": "//localhost:8081/js/app.js",
         "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
