update import maps

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -35,9 +35,10 @@
     {
       "imports": {
         "single-spa": "//cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
-        "@moosecodes/root-config": "//moosecodes.com/mc-spa-root-config/dist/moosecodes-root-config.js",
+        "@moosecodes/root-config": "//moosecodes.com/moosecodes-root-config.js",
         "@moosecodes/mc-primary-nav-ui": "//moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
         "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-movies-ui": "//moosecodes.com/mc-movies-ui/dist/js/app.js",
         "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
@@ -50,8 +51,8 @@
       "imports": {
         "@moosecodes/root-config": "//localhost:9000/moosecodes-root-config.js",
         "@moosecodes/mc-primary-nav-ui": "//moosecodes.com/mc-primary-nav-ui/dist/js/app.js",
-        "@moosecodes/mc-news-ui": "//localhost:8080/js/app.js",
-        "@moosecodes/mc-movies-ui": "//localhost:8081/js/app.js",
+        "@moosecodes/mc-news-ui": "//moosecodes.com/mc-news-ui/dist/js/app.js",
+        "@moosecodes/mc-movies-ui": "//moosecodes.com/mc-movies-ui/dist/js/app.js",
         "@moosecodes/mc-styleguide": "//moosecodes.com/mc-styleguide/dist/moosecodes-mc-styleguide.js"
       }
     }
